--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <li><a class="page-scroll" href="#services-section">Services</a></li>
                             <li><a class="page-scroll" href="#portfolio-section">Works</a></li>
                             <li><a class="page-scroll" href="#team-section">Team</a></li>                            
-                            <li><a class="page-scroll" href="#prices-section">Prices</a></li>
+                            <li><a class="page-scroll" href="#prices-section">Budget </a></li>
                             <li><a class="page-scroll" href="#contact-section">Contact</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
